1.6
- fixed pixel icon offset

1.5
- new feature: Disabling Notifications Center
- known side effect: unhiding a Twitter client

1.4
- improved menu text label for hiding external screen, fixed logic

1.3
- configuration is restored when app quits
- more explanatory textation and icons
- added help view

1.2
- fixed bug where only one screen is available
- added auto updates

- [future feature]: Disable Notifications center ("launchctl unload -w /System/Library/LaunchAgents/com.apple.notificationcenterui.plist
killall NotificationCenter")

1.1
- ‘Turn External Display Off’ actually shades all but current display (if not only one or if it's in the middle!)
- updated icon
- slight refactoring
- changelog created